src/App.css
.App {
  text-align: center;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  background-color: #000000;

  height: 100vh;
  width: 100vw;
}

.Main {
  height: 60rem;
  width: 80rem;
  margin: 0;
  padding: 0;
  gap: 0;

  font-size: 8rem;
  background-color: #000000;
  color: white;
  font-family: 'AmaticSCBold';

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.Button {
  outline: 0.5rem solid white;
  background-color: black;
  padding: 0.8rem 8rem; 
  border-radius: 1rem;
  font-size: 5rem;

  transition: 0.1s;
  scale: 1.0;
}

.Button:hover {
  cursor: pointer;
  transition: 0.1s;
  scale: 1.05;
}

.hidden {
  visibility:hidden;
}

@font-face {
  font-family: 'AmaticSCBold';
  src: local('AmaticSCBold'), url(./fonts/AmaticSC-Bold.ttf), format('truetype');
}

